--- a/pesanan.html
+++ b/pesanan.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
-    <title>D'Cafe Pugeran</title>
+    <title>Cafe Kekinian</title>
   </head>
   <body>
   <!-- Jumbotron -->
       <div class="jumbotron jumbotron-fluid text-center">
         <div class="container">
-          <h1 class="display-4"><span class="font-weight-bold">D'Cafe Pugeran</span></h1>
+          <h1 class="display-4"><span class="font-weight-bold">Cafe Kekinian</span></h1>
           <hr>
-          <p class="lead font-weight-bold">"Enjoy and Choose your favorite Menu"<br> 
+          <p class="lead font-weight-bold">"Gaes, Enjoy and Choose your favorite Menu"<br> 
         </div>
       </div>
   <!-- Akhir Jumbotron -->
@@ -27,7 +27,7 @@
   <!-- Navbar -->
       <nav class="navbar navbar-expand-lg" style="background-color: #2BBBAD;">
         <div class="container">
-        <a class="navbar-brand text-dark" href="index.html"><strong>D'Cafe</strong>Pugeran</a>
+        <a class="navbar-brand text-dark" href="index.html"><strong>Cafe</strong>Kekinian</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -140,7 +140,7 @@
         <div class="row footer-body">
           <div class="col-md-6">
           <div class="copyright">
-            <strong>Copyright</strong> <i class="far fa-copyright"></i> 2020 -  Designed by Alfirdaus&Rinaldo</p>
+            <strong>Copyright</strong> <i class="far fa-copyright"></i> 2021 -  Designed by Feri&Friends</p>
           </div>
           </div>
           <div class="col-md-6 d-flex justify-content-end">
