--- a/menu.html
+++ b/menu.html
@@ -4,30 +4,28 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
-
-    <title>D'Cafe Pugeran</title>
+    <title>Cafe Kekinian</title>
   </head>
   <body>
   <!-- Jumbotron -->
       <div class="jumbotron jumbotron-fluid text-center">
         <div class="container">
-          <h1 class="display-4"><span class="font-weight-bold">D'Cafe Pugeran</span></h1>
+          <h1 class="display-4"><span class="font-weight-bold">Cafe Kekinian</span></h1>
           <hr>
-          <p class="lead font-weight-bold">"Enjoy and Choose your favorite Menu"<br> 
+          <p class="lead font-weight-bold">"Gaes, Enjoy and Choose your favorite Menu"<br> 
         </div>
       </div>
   <!-- Akhir Jumbotron -->
 
   <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg"  style="background-color: #2BBBAD;">
+      <nav class="navbar navbar-expand-lg" style="background-color: #2BBBAD;">
         <div class="container">
-        <a class="navbar-brand text-dark" href="index.html"><strong>D'Cafe</strong>Pugeran</a>
+        <a class="navbar-brand text-dark" href="index.html"><strong>Cafe</strong>Kekinian</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +42,7 @@
               <a class="nav-link mr-4" href="pesanan.html">PESANAN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-4" href="#">LOGOUT</a>
+              <a class="nav-link mr-4" href="#">LOG OUT</a>
             </li>
           </ul>
         </div>
@@ -61,75 +59,69 @@
               <img src="images/bakso.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Bakso Urat</h5>
-               <label class="card-text harga">Rp. 13.000</label><br>
+               <label class="card-text harga">Rp. 15.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>
-
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/mieayam.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Mie Ayam</h5>
-               <label class="card-text">Rp. 13.000</label><br>
+               <label class="card-text">Rp. 10.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>
-
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/nasgor.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Nasi Goreng</h5>
-                <label class="card-text">Rp. 10.000</label><br>
-                <a href="#" class="btn btn-primary btn-sm">EDIT</a>
-                <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card border-dark">
-              <img src="images/mieayambakso.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold">Mie Ayam Bakso</h5>
                 <label class="card-text">Rp. 15.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>
+          <div class="col-md-3">
+            <div class="card border-dark">
+              <img src="images/mieayambakso.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title font-weight-bold">Mie Ayam Bakso</h5>
+                <label class="card-text">Rp. 13.000</label><br>
+                <a href="#" class="btn btn-primary btn-sm">EDIT</a>
+                <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
+              </div>
+            </div>
+          </div>
          </div>  
-
          <div class="row mt-3">
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/lele.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Lele Bakar</h5>
-                <label class="card-text">Rp. 12.000</label><br>
+                <label class="card-text">Rp. 10.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>
-
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/tehobeng.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Teh Obeng</h5>
-                <label class="card-text">Rp. 5.000</label><br>
+                <label class="card-text">Rp. 4.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>
-
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/juspukat.jpg" class="card-img-top" alt="...">
@@ -141,63 +133,58 @@
               </div>
             </div>
           </div>
-
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/esjeruk.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Es Jeruk</h5>
-                <label class="card-text">Rp. 8.000</label><br>
+                <label class="card-text">Rp. 6.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>
          </div>  
-
          <div class="row mt-3 mb-5">
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/sanford.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Air Minum Sanford</h5>
-                <label class="card-text">Rp. 5.000</label><br>
+                <label class="card-text">Rp. 6.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>  
-
           <div class="col-md-3">
             <div class="card border-dark ">
               <img src="images/nasi.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Nasi Putih</h5>
-                <label class="card-text">Rp. 3.000</label><br>
+                <label class="card-text">Rp. 4.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>        
-
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/jusmangga.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Jus Mangga</h5>
-                <label class="card-text">Rp. 8.000</label><br>
+                <label class="card-text">Rp. 7.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
             </div>
           </div>   
-
           <div class="col-md-3">
             <div class="card border-dark">
               <img src="images/ayambakar.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Ayam Bakar</h5>
-                <label class="card-text">Rp. 17.000</label><br>
+                <label class="card-text">Rp. 16.000</label><br>
                 <a href="#" class="btn btn-primary btn-sm">EDIT</a>
                 <a href="#" class="btn btn-danger btn-sm">HAPUS</a>
               </div>
@@ -216,7 +203,6 @@
             <strong>Copyright</strong> <i class="far fa-copyright"></i> 2021 -  Designed by Feri&Friends</p>
           </div>
           </div>
-
           <div class="col-md-6 d-flex justify-content-end">
           <div class="icon-contact">
           <label class="font-weight-bold">Follow Us </label>
@@ -228,10 +214,6 @@
         </div>
       </div>
   <!-- Akhir Footer -->
-
-
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
