--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
-
-    <title>D'Cafe Pugeran</title>
+    <title>Cafe Kekinian</title>
   </head>
   <body>
 
   <!-- Jumbotron -->
       <div class="jumbotron jumbotron-fluid text-center">
         <div class="container">
-          <h1 class="display-4"><span class="font-weight-bold">D'Cafe Pugeran</span></h1>
+          <h1 class="display-4"><span class="font-weight-bold">Cafe Kekinian</span></h1>
           <hr>
-          <p class="lead font-weight-bold">"Enjoy and Choose your favorite Menu"</p>
+          <p class="lead font-weight-bold">"Gaes, Enjoy and Choose your favorite Menu"</p>
         </div>
       </div>
   <!-- Akhir Jumbotron -->
@@ -28,11 +26,10 @@
   <!-- Navbar -->
       <nav class="navbar navbar-light" style="background-color: #2BBBAD;">
         <div class="container">
-        <a class="navbar-brand text-black" href="index.html"><strong>D'Cafe</strong> Pugeran</a>
+        <a class="navbar-brand text-black" href="index.html"><strong>Cafe</strong> Kekinian</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -52,13 +49,12 @@
        </div> 
       </nav>
   <!-- Akhir Navbar -->
-
   <!-- Menu -->    
       <div class="container">
         <div class="judul text-center mt-5">
-          <h3 class="font-weight-bold">D'Cafe Pugeran</h3>
+          <h3 class="font-weight-bold">Cafe Kekinian</h3>
           <h5>jl.Abimanyu V, Pendirikan kidul, Kota Semarang
-          <br>Cafe Buka Jam <strong>10:00 - 22:00</strong></h5>
+          <br>Cafe Buka Jam :<strong>10:00 - 22:00</strong></h5>
         </div>
 
         <div class="row mb-5 mt-5 ">
@@ -66,11 +62,10 @@
             <div class="card bg-dark text-white border-light">
               <img src="images/background/menu2.jpg" class="card-img" alt="Daftar Menu">
               <div class="card-img-overlay mt-5 text-center">
-               <a href="menu.html" class="btn btn-info">DAFTAR MENU</a>
+               <a href="menu.html" class="btn btn-info">MENU</a>
               </div>
             </div>
           </div>
-
           <div class="col-md-6 d-flex justify-content-start">
             <div class="card bg-dark text-white border-light">
               <img src="images/background/menu3.jpg" class="card-img" alt="Pesanan">
@@ -92,7 +87,6 @@
             <strong>Copyright</strong> <i class="far fa-copyright"></i> 2021 -  Designed by Feri&Friends</p>
           </div>
           </div>
-
           <div class="col-md-6 d-flex justify-content-end">
           <div class="icon-contact">
           <label class="font-weight-bold">Follow Us </label>
@@ -104,7 +98,6 @@
         </div>
       </div>
   <!-- Akhir Footer -->
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
